--- a/style.css
+++ b/style.css
@@ -6,87 +6,9 @@
             font-family: 'Roboto', sans-serif;
         }
         
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6,
-        span {
-            color: #242424;
-            text-align: center;
-            line-height: 1.25;
-        }
-        
-        h1 {
-            font-size: 36px;
-        }
-        
-        p {
-            line-height: 1.5;
-            font-size: 16px;
-        }
-        
         li {
+            font-size: 18px;
             list-style-type: none;
-        }
-        
-        .text--MyName {
-            color: #6030b1;
-        }
-        /* NAVIGATION BAR*/
-        
-        nav {
-            width: 100%;
-            max-width: 1000px;
-            height: 100px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        
-        .nav__lisk--list {
-            display: flex;
-        }
-        
-        .nav__link--anchor {
-            margin: 0 12px;
-            text-decoration: none;
-            color: #242424;
-            font-weight: bold;
-        }
-        
-        .nav__link--anchor-primary {
-            padding: 8px 20px;
-            transition: all 1s ease;
-        }
-        
-        .nav__link--anchor-primary:hover {
-            background-color: #5d3eff;
-            border-radius: 50px;
-            color: #fff;
-            background-color: #6030b1;
-        }
-        
-        .flex {
-            display: flex;
-        }
-        
-        .flex-1 {
-            flex: 1;
-        }
-        
-        .personal__logo {
-            font-size: 24px;
-            color: #6030b1;
-            font-weight: bold;
-            margin: 0 12px;
-        }
-        
-        .container {
-            margin: 50px 0px;
-            height: 250px;
         }
         
         .row {
@@ -99,10 +21,63 @@
             background-color: #f8f8f8;
         }
         
-        .section__title {
-            margin-bottom: 20px;
+        .container {
+            padding: 50px 0px;
         }
-        /*ABOUT-ME*/
+        
+        .section__title {
+            font-size: 30px;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        /*nav*/
+        
+        nav {
+            height: 100px;
+            width: 100%;
+            max-width: 1000px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin: 0 auto;
+        }
+        
+        .nav__link--list {
+            display: flex;
+        }
+        
+        .nav__link--anchor {
+            color: #242424;
+            font-weight: bold;
+            margin-left: 12px;
+            text-decoration: none;
+        }
+        
+        .nav__link-anchor--primary {
+            padding: 8px 20px;
+            transition: all 300ms ease;
+        }
+        
+        .nav__link-anchor--primary:hover {
+            background-color: #5d3def;
+            color: #fff;
+            border-radius: 50px;
+            font-weight: 500;
+        }
+        
+        a {
+            text-decoration: none;
+        }
+        
+        .my-name {
+            font-size: 24px;
+            font-weight: bold;
+            color: #6030b1;
+            margin: 0 12px;
+        }
+        /*about-me*/
         
         #about-me {
             min-height: 100vh;
@@ -110,70 +85,118 @@
             flex-direction: column;
         }
         
-        .about-me__info {
-            display: flex;
-            flex-direction: column;
+        .flex-1 {
+            flex: 1;
         }
         
-        .about-me__info--container {
+        .flex {
             display: flex;
+        }
+        
+        .about-me__info--container,
+        .content p {
+            display: flex;
+            justify-content: center;
             flex-direction: column;
             align-items: center;
-            max-width: 600px;
+            max-width: 500px;
             margin: 0 auto;
-            text-align: center;
         }
         
         .about-me__picture--mask {
             width: 100px;
             height: 100px;
-            border-radius: 50%;
+            border-radius: 50px;
             overflow: hidden;
-            margin-bottom: 20px;
-            box-shadow: 0 8px 16px rgb(0, 0, 0, 16);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 1);
+            margin-top: 20px;
         }
         
         .about-me__picture {
             width: 100%;
         }
         
+        .about-me__info--title {
+            margin: 20px;
+            font-size: 36px;
+        }
+        
+        .my-color {
+            color: #6030b1;
+        }
+        
         .about-me__info--para {
             font-size: 20px;
-            margin-top: 14px;
-            margin-bottom: 28px;
             line-height: 1.5;
+            text-align: center;
+            color: #242424;
+            font-weight: 500;
+            margin-bottom: 7px;
         }
         
         .about-me__link {
-            font-size: 20px;
             color: #242424;
-            text-decoration: none;
-            padding: 0 16px;
+            font-size: 20px;
+            padding: 24px;
+        }
+        
+        .about-me__links {
+            padding: 20px;
+        }
+        
+        .fa-linkedin-in:hover {
+            transform: translateY(-5px);
+        }
+        
+        .fa-github:hover {
+            transform: translateY(-5px);
+        }
+        
+        .fa-envelope:hover {
+            transform: translateY(-5px);
+        }
+        
+        .fa-file-pdf:hover {
+            transform: translateY(-5px);
+        }
+        
+        .fa-link:hover {
+            transform: translateY(-5px);
+        }
+        
+        .fa-linkedin-in,
+        .fa-github,
+        .fa-envelope,
+        .fa-file-pdf,
+        .fa-link {
+            transition: all 0.4s ease;
         }
         
         .about-me__img--container {
             flex: 1;
             display: flex;
             align-items: center;
-            width: 750px;
-            height: 700px;
+            justify-content: center;
+            width: 800px;
         }
         
         .about-me__img {
             width: 100%;
         }
-        /*TECH-STACL*/
+        /*tech-stack*/
         
         .language__img {
             width: 100%;
             max-width: 100px;
-            transition: all 300ms;
+            height: 100px;
+            transition: all 300ms ease;
+            margin-bottom: 25px;
         }
         
         .language__img:hover {
             filter: brightness(80%);
-            opacity: 0.86;
             transform: scale(0.9);
+            opacity: 0.84;
         }
         
         .language {
@@ -197,24 +220,26 @@
             position: absolute;
             bottom: 0;
             transform: scale(0);
-            transition: all 300ms;
             font-size: 20px;
-            margin: -10px;
+            font-weight: 500;
+            transition: all 300ms;
         }
         
         .language:hover .language__name {
             transform: scale(1);
         }
         
-        .HTML {
-            width: 85px;
-            margin: 10px;
-            height: 90px;
+        .n {
+            color: #f8f8f8;
         }
-        /*projects */
+        /*projects*/
         
         .project {
             margin-bottom: 135px;
+        }
+        
+        .project:last-child {
+            margin-bottom: 40px;
         }
         
         .project__img {
@@ -225,7 +250,7 @@
         .project__wrapper {
             display: flex;
             box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
-            border-radius: 20px;
+            border-radius: 25px;
             overflow: hidden;
             position: relative;
         }
@@ -239,8 +264,8 @@
             width: 100%;
             background-color: #1c1d25;
             opacity: 0;
-            transition: opacity 450ms ease;
             z-index: 2;
+            transition: all 450ms ease;
         }
         
         .project:hover .project__wrapper:before {
@@ -249,12 +274,7 @@
         
         .project:hover .project__img {
             transform: scale(1.07);
-            filter: blur(2px);
-        }
-        
-        .project:hover .project__description {
-            opacity: 1;
-            transform: translateY(-50%);
+            filter: blur(5px);
         }
         
         .project__list {
@@ -269,7 +289,30 @@
             max-width: 550px;
             z-index: 3;
             opacity: 0;
-            transition: transform 450ms, opacity 300ms ease;
+            transition: all 450ms ease;
+        }
+        
+        .project:hover .project__description {
+            opacity: 1;
+            transform: translateY(-50%)
+        }
+        
+        .project__description--title {
+            font-size: 40px;
+        }
+        
+        .project__description--sub-title {
+            margin: 16px 0;
+        }
+        
+        .project__description--para {
+            margin-bottom: 20px;
+        }
+        
+        .project__description--link {
+            font-size: 20px;
+            margin-right: 16px;
+            text-decoration: none;
         }
         
         .project__description--title,
@@ -279,17 +322,182 @@
             text-align: left;
             color: #fff;
         }
+        /*contact*/
         
-        .project__description--title {
-            font-size: 40px;
+        #contact {
+            position: relative;
+            min-height: 100vh;
+            padding: 50px 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
         
-        .project__description--para {
-            margin: 16px 0;
+        #contact .content {
+            max-width: 800px;
+            text-align: center;
         }
         
-        .project__description--link {
+        #contact .content h1 {
+            font-size: 50px;
+            font-weight: 500;
+            color: #242424;
+        }
+        
+        #contact .content p {
+            font-weight: 500;
+            color: #242424;
             font-size: 20px;
-            margin-right: 16px;
-            text-decoration: none;
+            line-height: 1.5;
+            text-align: center;
+            margin-top: 10px;
+        }
+        
+        .container {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 30px;
+        }
+        
+        .container .contactInfo {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+        }
+        
+        .container .contactInfo .box {
+            position: relative;
+            padding: 20px 0;
+            display: flex;
+        }
+        
+        .container .contactInfo .box .icon {
+            min-width: 60px;
+            height: 60px;
+            background: #636161;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            font-size: 22px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        
+        .container .contactInfo .box .text {
+            display: flex;
+            margin-left: 20px;
+            font-size: 16px;
+            font-weight: 300;
+            color: #636161;
+            flex-direction: column;
+            justify-content: center;
+        }
+        
+        .container .contactInfo .box .text h3 {
+            font-weight: 500;
+            color: #000;
+        }
+        
+        .contactForm {
+            width: 40%;
+            padding: 40px;
+            background: #242424;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        
+        .contactForm h2 {
+            font-size: 30px;
+            color: #8d8585;
+        }
+        
+        .contactForm .inputBox {
+            position: relative;
+            width: 100%;
+            margin-top: 10px;
+        }
+        
+        .contactForm .inputBox input,
+        .contactForm .inputBox textarea {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            margin: 10px 0;
+            border-radius: none;
+            border-bottom: 2px solid #333;
+            outline: none;
+            resize: none;
+        }
+        
+        .contactForm .inputBox input[type="submit"] {
+            background: #636161;
+            transition: 300ms ease;
+            cursor: pointer;
+        }
+        
+        .contactForm .inputBox input[type="submit"]:hover {
+            background: #373737;
+            font-weight: bold;
+            color: #fff;
+        }
+        /*footer*/
+        
+        footer {
+            background-color: #242424;
+        }
+        
+        .footer__row {
+            padding: 8% 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        
+        .footer_logo {
+            margin-bottom: 20px;
+            border-radius: 50px;
+            overflow: hidden;
+        }
+        
+        .footer__social--list {
+            margin-bottom: 28px;
+            width: 100%;
+            max-width: 500px;
+            display: flex;
+            justify-content: space-around;
+        }
+        
+        .mylogo-img {
+            width: 70px;
+            height: 70px;
+        }
+        
+        .footer__social--link,
+        .footer__copyright {
+            color: #fff;
+        }
+        
+        .footer__logo--hover {
+            color: #fff;
+            position: absolute;
+            right: 0;
+            top: 30px;
+            font-weight: bold;
+            opacity: 0;
+        }
+        
+        .footer__anchor {
+            position: relative;
+        }
+        
+        .footer__anchor:hover .footer__logo--hover {
+            transform: translateX(60px);
+            color: #fff;
+            opacity: 1;
         }
