adding a dropdown menu

--- a/style.css
+++ b/style.css
@@ -47,12 +47,10 @@
     nav {
         height: 100px;
         width: 100%;
-        max-width: 1000px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin: 0 auto;
-        padding: 0 12px;
+        padding: 0 80px;
     }
     
     .nav__link--list {
@@ -381,7 +379,7 @@
     #contact .content h1 {
         font-size: 50px;
         font-weight: 500;
-        color: #242424;
+        color: #6030b1;
     }
     
     #contact .content p {
@@ -434,6 +432,11 @@
         font-size: 22px;
         font-weight: bold;
         cursor: pointer;
+        transition: all 300ms ease;
+    }
+    
+    .container .contactInfo .box .icon:hover {
+        background-color: #6030b1;
     }
     
     .container .contactInfo .box .text {
@@ -447,22 +450,25 @@
     }
     
     .container .contactInfo .box .text h3 {
-        font-weight: 500;
-        color: #000;
+        font-weight: 600;
+        font-size: 20px;
+        color: #6030b1;
     }
     
     .contactForm {
         width: 40%;
         padding: 40px;
-        background: #242424;
+        background: #7a7777;
         display: flex;
         align-items: center;
         justify-content: center;
+        box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+        border-radius: 15px;
     }
     
     .contactForm h2 {
         font-size: 30px;
-        color: #8d8585;
+        color: #6030b1;
     }
     
     .contactForm .inputBox {
@@ -481,18 +487,23 @@
         border-bottom: 2px solid #242424;
         outline: none;
         resize: none;
+        border-radius: 10px;
     }
     
     .contactForm .inputBox .input {
         background: #636161;
         transition: 300ms ease;
         cursor: pointer;
+        font-weight: 600;
+        font-size: 15px;
         width: 100%;
         height: 50px;
+        border-radius: 10px;
+        border: none;
     }
     
     .contactForm .inputBox .input:hover {
-        background: #373737;
+        background: #6030b1;
         font-weight: bold;
         color: #fff;
     }
@@ -517,11 +528,11 @@
     }
     
     .footer__social--list {
-        margin-bottom: 28px;
         width: 100%;
         max-width: 500px;
         display: flex;
         justify-content: space-around;
+        margin-top: 10px;
     }
     
     .mylogo-img {
@@ -532,6 +543,10 @@
     .footer__social--link,
     .footer__copyright {
         color: #fff;
+    }
+    
+    .footer__copyright {
+        margin-top: 50px;
     }
     
     .footer__logo--hover {
@@ -585,6 +600,59 @@
         width: 100%;
         left: 0;
     }
+    /*burger menu*/
+    
+    .btn__menu {
+        position: absolute;
+        top: 0;
+        right: 4px;
+        margin-top: 7px;
+        margin-right: 20px;
+        font-size: 30px;
+        padding: 10px;
+        border: none;
+        color: #242424;
+        background-color: transparent;
+        cursor: pointer;
+    }
+    
+    .menu__backdrop {
+        position: absolute;
+        top: 0;
+        right: 2px;
+        width: 200px;
+        height: 500px;
+        background-color: #959292;
+        z-index: 100;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 300ms ease;
+        visibility: hidden;
+        opacity: 0;
+    }
+    
+    .menu__links {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .menu__link {
+        font-size: 20px;
+        color: #242424;
+        font-weight: 600;
+    }
+    
+    .menu__list {
+        margin-top: 60px;
+    }
+    
+    .menu--open .menu__backdrop {
+        visibility: visible;
+        opacity: 1;
+    }
     /*small phones,tablets,large phones*/
     
     @media (max-width: 768px) {
@@ -634,5 +702,17 @@
     @media(max-width:415px) {
         .section__title {
             font-size: 20px;
+        }
+    }
+    
+    @media(max-width:540px) {
+        .nav__link--list {
+            display: none;
+        }
+    }
+    
+    @media(min-width:540px) {
+        .btn__menu {
+            display: none;
         }
     }
