--- a/style.css
+++ b/style.css
@@ -681,6 +681,9 @@
         .project__description--para {
             display: none;
         }
+        nav {
+            padding: 0 40px;
+        }
     }
     
     @media( max-width:991px) {
@@ -705,13 +708,13 @@
         }
     }
     
-    @media(max-width:540px) {
+    @media(max-width:700px) {
         .nav__link--list {
             display: none;
         }
     }
     
-    @media(min-width:540px) {
+    @media(min-width:700px) {
         .btn__menu {
             display: none;
         }
